--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,4 +1,4 @@
-version: "2"
+version: 2
 
 build:
   os: "ubuntu-22.04"
@@ -7,6 +7,8 @@ build:
 
 python:
   install:
+    - method: pip
+      path: .
     - requirements: docs/requirements.txt
 
 sphinx:
