--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,6 @@
-sphinx==7.1.2
-sphinx-rtd-theme==1.3.0rc1
-sphinxawesome-theme==5.1.1
-myst_nb
+sphinx
+sphinx-rtd-theme
+sphinxawesome-theme
 sphinx_autodoc_typehints
 sphinx_design
+myst_nb
